Fixed a previous merge error where someone kept multiple changes on animal list view and we only needed one. Removed some leftover git syntax on index.html. Adjusted margin top on mobile view for animals to ensure there was no overlap with nav bar.

--- a/client/styles.css
+++ b/client/styles.css
@@ -181,9 +181,9 @@ a.navbar-brand:hover, a.navbar-brand:active, a.navbar-brand:visited, a.navbar-br
 .animal-description {
     float: right;
 }
-/*.animal-div {
-    align-content: center;
-}*/
+.animal-div {
+    margin-top: 7.5em;
+}
 .animal-pic {
     height: auto;
     width: auto;
